renamed:    Router/Route.js -> Route/Route.js 	renamed:    Router/allRoutes.js -> Route/allRoutes.js 	renamed:    Router/router.js -> Route/router.js 	modified:   index.html 	renamed:    pages/404.html -> page/404.html 	renamed:    pages/home.html -> page/home.html

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <header>
         Menu du site
     </header>
-    <main>
+    <main id="main-page">
         <!---->
     </main>
     <footer>
         Footer du site
     </footer>
-    <script type="module" src="./Router/router.js"></script>
+    <script type="module" src="./Route/router.js"></script>
 </body>
 </html>
