Rootage et bootstrap

--- a/index.html
+++ b/index.html
@@ -3,26 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" src="./node_modules/bootstrap/dist/css/bootstrap.min.css.map"/>
-    <link rel="stylesheet" src="scss/main.css"/>
     <title>Document</title>
 </head>
 <body>
-
     <header>
-        <button type="button" class="btn btn-primary">Coucou</button>
+        Menu
     </header>
     <main id="main-page">
-        <!---->
+
     </main>
     <footer>
-        Footer du site
+        footer du site
     </footer>
-    <script type="module" src="./Route/router.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="./Router/router.js"></script>
 </body>
 </html>
